<resources>
    <string name="app_name">Liste de tâches</string>
    <string name="addTaskMenu">Ajouter une tâche</string>
    <string name="addTaskLabel">Ajouter une tâche</string>
    <string name="newTaskHint">Entrez votre tâche</string>
    <string name="taskWeightLabel">Importance de la tâche</string>
    <string name="taskWeightLow">Basse</string>
    <string name="taskWeightMedium">Moyenne</string>
    <string name="taskWeightHigh">Haute</string>
    <string name="addTaskButton">Ajouter</string>
    <string name="settingsMenu">Paramètres</string>
    <string name="policeSizeTitle">Taille de police</string>
    <string name="displayPriorities">Afficher les priorités</string>
    <string name="policeSize">Taille de police: 16</string>
</resources>